# aidlc-workflow-launcher

./: README.md  pyproject.toml
cli/: __main__.py  exceptions.py
cli/commands/: clone.py  init.py  re.py  resume.py  start.py  status.py  update.py  update_docs.py  update_rules.py
cli/config/: constants.py
cli/services/: git_service.py  github_release_service.py  platform_service.py  staleness_service.py  state_service.py  workspace_config_service.py
cli/templates/aidlc-docs/: aidlc-state.md  audit.md
tests/commands/: test_clone.py  test_init.py  test_resume.py  test_status.py  test_update_rules.py
tests/pbt/: test_config_roundtrip.py  test_repo_name_derivation.py  test_staleness_logic.py
tests/services/: test_git_service.py  test_github_release_service.py  test_platform_service.py  test_staleness_service.py  test_state_service.py  test_workspace_config_service.py
