[project]
name = "aidlc-cli"
version = "0.1.0"
description = "AI-DLC Workflow Launcher CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "pytest-mock>=3.0",
]

[project.scripts]
aidlc = "cli.__main__:cli"

[tool.setuptools.packages.find]
include = ["cli*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
